unpackaged/main/default/objects/Contact/fields/Alternative_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Address__c</fullName>
    <label>Alternative Address</label>
    <type>TextArea</type>
</CustomField>