unpackaged/main/default/objects/Contact/fields/Alternative_Mailing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mailing_Address_City__c</fullName>
    <label>Alternative Mailing Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>