unpackaged/main/default/objects/Contact/fields/Alternative_Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mailing_Address_State__c</fullName>
    <label>Alternative Mailing Address State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>