unpackaged/main/default/objects/Contact/fields/Alternative_Mailing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mailing_Address_Street__c</fullName>
    <label>Alternative Mailing Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>