unpackaged/main/default/objects/Contact/fields/Alternative_Mailing_Address_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Mailing_Address_Zip_Code__c</fullName>
    <label>Alternative Mailing Address Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>