unpackaged/main/default/objects/Contact/fields/Authorization_Received__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization Received</label>
    <type>Checkbox</type>
</CustomField>