unpackaged/main/default/objects/Contact/fields/Authorized_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Relationship__c</fullName>
    <label>Authorized Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>