unpackaged/main/default/objects/Contact/fields/BIN__c.field-meta.xml
<CustomField>
    <fullName>BIN__c</fullName>
    <label>BIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>