unpackaged/main/default/objects/Contact/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSA</label>
    <referenceTo>CSA__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>