unpackaged/main/default/objects/Contact/fields/CSA_Account__c.field-meta.xml
<CustomField>
    <fullName>CSA_Account__c</fullName>
    <description>A subdivision of suffix.  These subdivisions are designated by the purchaser &amp; Aetna for reporting, administrative, and financial needs (specifically to summarize/combine numbers).  An ACCOUNT will always be associated with at least one INDUSTRY.</description>
    <label>CSA Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>