unpackaged/main/default/objects/Contact/fields/CSA_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CSA_Suffix__c</fullName>
    <description>This is a subdivision of a control.  These subdivisions are designated  by the purchaser and Aetna for reporting administrative and accounting needs (specifically to summarize/combine accounts).  A SUFFIX will always be associated to one and only one
CONTROL.  A SUFFIX will always be associated with at least one ACCOUNT.</description>
    <label>CSA Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>