unpackaged/main/default/objects/Contact/fields/disableLetterButton__c.field-meta.xml
<CustomField>
    <fullName>disableLetterButton__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to disable the letter button after the second attempt to send a letter</inlineHelpText>
    <label>disableLetterButton</label>
    <type>Checkbox</type>
</CustomField>