unpackaged/main/default/objects/Contact/fields/Final_Notice_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Id__c</fullName>
    <label>Final Notice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>