unpackaged/main/default/objects/Contact/fields/Final_Notice_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Mailed_Date__c</fullName>
    <description>The date when the LOB system returns that the final Notice letter has been mailed.</description>
    <inlineHelpText>The date when the LOB system returns that the final Notice letter has been mailed.</inlineHelpText>
    <label>Final Notice Mailed Date</label>
    <type>DateTime</type>
</CustomField>