unpackaged/main/default/objects/Contact/fields/Final_Notice_Most_Recent_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Most_Recent_Mailed_Date__c</fullName>
    <description>The date when the LOB system returns that the welcome letter has been mailed.</description>
    <inlineHelpText>The date when the LOB system returns that the welcome letter has been mailed.</inlineHelpText>
    <label>Final Notice Mailed Date</label>
    <summarizedField>Communication__c.Send_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Communication__c.Communication_Type__c</field>
        <operation>equals</operation>
        <value>Final Notice Letter</value>
    </summaryFilterItems>
    <summaryForeignKey>Communication__c.Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>