unpackaged/main/default/objects/Contact/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <formula>CSA__r.Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Go-Live Date</label>
    <type>Date</type>
</CustomField>