unpackaged/main/default/objects/Contact/fields/Invalid_Address__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote when the LOB(Vendor) system returns a bad or invalid US address.</description>
    <inlineHelpText>Used to denote when the LOB(Vendor) system returns a bad or invalid US address.</inlineHelpText>
    <label>Invalid Address</label>
    <type>Checkbox</type>
</CustomField>