unpackaged/main/default/objects/Contact/fields/Is_there_a_Secondary_Insurance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Secondary_Insurance_Plan__c</fullName>
    <inlineHelpText>Does the patient have medical benefits and/or pharmacy benefits through any private or government health insurer/payer/program? Y/N</inlineHelpText>
    <label>Is there a Secondary Insurance Plan?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>