unpackaged/main/default/objects/Contact/fields/Language_Assistance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Language_Assistance_Phone__c</fullName>
    <formula>&quot;1(844)969-2371&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Assistance Phone</label>
    <type>Text</type>
</CustomField>