unpackaged/main/default/objects/Contact/fields/Medical_Drug_List__c.field-meta.xml
<CustomField>
    <fullName>Medical_Drug_List__c</fullName>
    <formula>TEXT(CSA__r.Medical_Drug_List__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical Drug List</label>
    <type>Text</type>
</CustomField>