unpackaged/main/default/objects/Contact/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <formula>Patient_Address_Line_1__c &amp; BR() &amp;
IF(Patient_Address_Line_2__c != &quot;&quot;, Patient_Address_Line_2__c  &amp; BR(), &quot;&quot;) &amp;
Patient_City__c &amp; &quot;, &quot; &amp;
Patient_State__c &amp; &quot; &quot; &amp;
Patient_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Address</label>
    <type>Text</type>
</CustomField>