unpackaged/main/default/objects/Contact/fields/Patient_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_Line_2__c</fullName>
    <label>Patient Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>