unpackaged/main/default/objects/Contact/fields/Patient_Age__c.field-meta.xml
<CustomField>
    <fullName>Patient_Age__c</fullName>
    <formula>IF(
ISNULL( Patient_Birth_Date__c), &#39;&#39;,
IF(
FLOOR((TODAY()- Patient_Birth_Date__c+1)/365.2425) &lt; 18,
IMAGE(&quot;/resource/MINOR&quot;,&quot; &quot;) + &#39;   &#39; + TEXT(FLOOR((TODAY()- Patient_Birth_Date__c+1)/365.2425)),
TEXT(FLOOR((TODAY()- Patient_Birth_Date__c+1)/365.2425))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Age</label>
    <type>Text</type>
</CustomField>