unpackaged/main/default/objects/Contact/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <label>Patient First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>