unpackaged/main/default/objects/Contact/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <label>Patient Gender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>