unpackaged/main/default/objects/Contact/fields/Patient_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_Group_ID__c</fullName>
    <formula>CSA_Control__c &amp; CSA_Suffix__c &amp; CSA_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Group ID</label>
    <type>Text</type>
</CustomField>