unpackaged/main/default/objects/Contact/fields/Patient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone_Number__c</fullName>
    <label>Patient Phone</label>
    <type>Phone</type>
</CustomField>