unpackaged/main/default/objects/Contact/fields/Patient_Priority_Note__c.field-meta.xml
<CustomField>
    <fullName>Patient_Priority_Note__c</fullName>
    <label>Patient Priority Note</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>