unpackaged/main/default/objects/Contact/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <label>Patient State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>