unpackaged/main/default/objects/Contact/fields/Plan_Sponsor_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Unique_ID__c</fullName>
    <label>Plan Sponsor Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>