unpackaged/main/default/objects/Contact/fields/Policy_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_Group_ID__c</fullName>
    <label>Policy Group ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>