unpackaged/main/default/objects/Contact/fields/Primary_Subscriber_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscriber_Name__c</fullName>
    <inlineHelpText>The primary cardholder (this will not always be the patient). For minors, use this as the authorized rep.</inlineHelpText>
    <label>Primary Subscriber Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>