unpackaged/main/default/objects/Contact/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <formula>CASE( UPPER(Relationship_Code__c),
   &quot;A&quot;, &quot;Sponsored Mother&quot;,
   &quot;B&quot;, &quot;Sponsored Father&quot;,
   &quot;C&quot;, &quot;Child&quot;,
   &quot;CH&quot;, &quot;Child&quot;,
   &quot;D&quot;, &quot;Daughter&quot;,
   &quot;E&quot;, &quot;Child 2&quot;,
   &quot;F&quot;, &quot;Sponsored&quot;,
   &quot;G&quot;, &quot;Child 3&quot;,
   &quot;H&quot;, &quot;Husband&quot;,
   &quot;7&quot;, &quot;Husband&quot;,
   &quot;I&quot;, &quot;Subscriber&quot;,
   &quot;J&quot;, &quot;Child 4&quot;,
   &quot;K&quot;, &quot;Child 5&quot;,
   &quot;L&quot;, &quot;Children 6 or More&quot;,
   &quot;M&quot;, &quot;Common Law Spouse&quot;,
   &quot;N&quot;, &quot;Divorced Spouse&quot;,
   &quot;P&quot;, &quot;Sponsored Male Child&quot;,
   &quot;Q&quot;, &quot;Sponsored Female Child&quot;,
   &quot;S&quot;, &quot;Son&quot;,
   &quot;T&quot;, &quot;Stepson&quot;,
   &quot;U&quot;, &quot;Stepdaughter&quot;,
   &quot;W&quot;, &quot;Wife&quot;,
   &quot;X&quot;, &quot;Sponsored Female&quot;,
   &quot;Y&quot;, &quot;Sponsored Male&quot;,
   &quot;Z&quot;, &quot;Spouse&quot;,
   &quot;1&quot;, &quot;Self&quot;,
   &quot;2&quot;, &quot;Power of Attorney&quot;,
   &quot;3&quot;, &quot;Legal Guardian&quot;,
   &quot;4&quot;, &quot;Mother&quot;,
   &quot;5&quot;, &quot;Father&quot;,
   &quot;8&quot;, &quot;Attorney&quot;,
   &quot;9&quot;, &quot;Partner&quot;,
   &quot;10&quot;, &quot;Other&quot;,
   &quot;AC&quot;, &quot;Adopted Child&quot;,
   &quot;AOR&quot;, &quot;Appointment of Representative&quot;,
   &quot;BL&quot;, &quot;Brother or Sister-in-law&quot;,
   &quot;BS&quot;, &quot;Brother or Sister&quot;,
   &quot;CD&quot;, &quot;Collateral Dependent&quot;,
   &quot;CF&quot;, &quot;Child - Insured Has No Financial Responsibility&quot;, 
   &quot;CG&quot;, &quot;Court Appointed Guardian&quot;, 
   &quot;CO&quot;, &quot;Cousin&quot;,
   &quot;CPS&quot;, &quot;Custodial Parent&quot;,
   &quot;DM&quot;, &quot;Dependent of a Minor Dependent&quot;,
   &quot;EE&quot;, &quot;Employee&quot;,
   &quot;EM&quot;, &quot;Emancipated Minor&quot;,
   &quot;FC&quot;, &quot;Foster Child&quot;,
   &quot;FoM&quot;, &quot;Father or Mother&quot;,
   &quot;GC&quot;, &quot;Grandson or Granddaughter&quot;,
   &quot;GP&quot;, &quot;Grandmother or Grandfather&quot;,
   &quot;GU&quot;, &quot;Guardian&quot;,
   &quot;HD&quot;, &quot;Handicapped Dependent&quot;,
   &quot;IP&quot;, &quot;Injured Plaintiff&quot;,
   &quot;LP&quot;, &quot;Life Partner&quot;,
   &quot;NE&quot;, &quot;Nephew or Niece&quot;, 
   &quot;OA&quot;, &quot;Other Adult&quot;, 
   &quot;OR&quot;, &quot;Other Relationship&quot;,
   &quot;PL&quot;, &quot;Mother-in-law or Father-in-law&quot;,
   &quot;RP&quot;, &quot;Responsible Party&quot;, 
   &quot;SC&quot;, &quot;Stepson or Stepdaughter&quot;, 
   &quot;SD&quot;, &quot;Sponsored Dependent&quot;,
   &quot;SL&quot;, &quot;Son-in-law or Daughter-in-law&quot;,
   &quot;SM&quot;, &quot;Stepmother&quot;,
   &quot;SO&quot;, &quot;Significant Other&quot;,
   &quot;ST&quot;, &quot;Stepfather&quot;, 
   &quot;UK&quot;, &quot;Unknown&quot;, 
   &quot;UN&quot;, &quot;Uncle or Aunt&quot;,
   &quot;WA&quot;, &quot;Ward&quot;,
   null, &quot;Subscriber&quot;,
   &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship</label>
    <type>Text</type>
</CustomField>