unpackaged/main/default/objects/Contact/fields/Send_Letters__c.field-meta.xml
<CustomField>
    <fullName>Send_Letters__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to figure out whether or not we want to send the Contact a letter. Normally this is going to be true but allows for certain contacts to be false</description>
    <inlineHelpText>If true, we will send the member a letter at the appropriate time, if false, we will stop any letters from being sent in the future.</inlineHelpText>
    <label>Send Letters?</label>
    <type>Checkbox</type>
</CustomField>