unpackaged/main/default/objects/Contact/fields/SHA1Hash_ID__c.field-meta.xml
<CustomField>
    <fullName>SHA1Hash_ID__c</fullName>
    <label>SHA1Hash ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>