unpackaged/main/default/objects/Contact/fields/Welcome_Letter_Id__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter_Id__c</fullName>
    <description>Used to save the letter id from LOB</description>
    <label>Welcome Letter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>