unpackaged/main/default/objects/Contact/fields/Welcome_Letter_Mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter_Mailed_Date__c</fullName>
    <description>The date when the LOB system returns that the welcome letter has been mailed.</description>
    <inlineHelpText>The date when the LOB system returns that the welcome letter has been mailed.</inlineHelpText>
    <label>Welcome Letter Mailed Date</label>
    <type>DateTime</type>
</CustomField>