unpackaged/main/default/objects/Contact/recordTypes/Member_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Member_Contacts</fullName>
    <active>true</active>
    <label>Member Contacts</label>
</RecordType>