unpackaged/main/default/objects/Contact/recordTypes/Non_Member_Contact.recordType-meta.xml
<RecordType>
    <fullName>Non_Member_Contact</fullName>
    <active>true</active>
    <label>Non Member Contact</label>
</RecordType>