unpackaged/main/default/objects/Contact/validationRules/Contact_Data_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Data_Restriction</fullName>
    <active>true</active>
    <description>Users other than System Admins and Integration user are unable to edit the First Name or Last Name fields.</description>
    <errorConditionFormula>AND(
AND(ISCHANGED(FirstName) || ISCHANGED(LastName)),
$Profile.Name != &#39;System Administrator&#39;,
$Profile.Name != &#39;System Administrator Full&#39;
)</errorConditionFormula>
    <errorMessage>You do not have permissions to change First Name or Last Name.</errorMessage>
</ValidationRule>