unpackaged/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Welcome_Letter_Mailed_Date__c</columns>
    <columns>Alternative_Phone__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Patient_Phone_Number__c</columns>
    <columns>CONTACT.DO_NOT_CALL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>Final_Notice_Mailed_Date__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Member_Contacts</value>
    </filters>
    <label>All Contacts</label>
</ListView>