unpackaged/main/default/objects/Contact/listViews/Member_Contacts.listView-meta.xml
<ListView>
    <fullName>Member_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Member_Contacts</value>
    </filters>
    <label>Member Contacts</label>
</ListView>